--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <link rel="stylesheet" type="text/css" href="./css/index.css">
   </head>
   <body>
-    <iframe id="map" src="https://www.google.com/maps/d/embed?mid=1rkj1pYeUXbM7OGlN6ildPOcN0MQ"></iframe>
+    <iframe id="map" src="https://www.google.com/maps/d/u/0/embed?mid=1SvXaaOEm7sRTuzI90XsrLS6ALVo"></iframe>
   </body>
 </HTML>
