map data update 201902201509

--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <HTML lang="ja">
   <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
   </head>
   <body>
-    <iframe id="map" src="https://www.google.com/maps/d/embed?mid=1rkj1pYeUXbM7OGlN6ildPOcN0MQ"></iframe>
+    <a href="https://www.google.com/maps/d/u/0/embed?mid=1SvXaaOEm7sRTuzI90XsrLS6ALVo">
+      <img id="img" src="img/toreka.gif" alt="半券サービス＆トレカ販売場所" title="半券サービス＆トレカ販売場所">
+    </a></br>
+    <a href="https://www.google.com/maps/d/embed?mid=1OEAdV3u3FJUvbb9M-JMQrQXihmU">
+      <img id="img" src="img/kankou.gif" alt="島田歩き" title="島田歩き">
+    </a>
+    <!-- <iframe id="map" src="https://www.google.com/maps/d/embed?mid=1rkj1pYeUXbM7OGlN6ildPOcN0MQ"></iframe> -->
   </body>
 </HTML>
