--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     <link rel="stylesheet" type="text/css" href="./css/index.css">
   </head>
   <body>
+    <body style="background: url(img/bg.jpg);">
     </br>
-    <a href="https://www.google.com/maps/d/u/0/embed?mid=1SvXaaOEm7sRTuzI90XsrLS6ALVo">
-      <img id="img" src="img/toreka.gif" alt="半券サービス＆トレカ販売場所" title="半券サービス＆トレカ販売場所">
-    </a></br></br>
-    <a href="https://www.google.com/maps/d/embed?mid=1OEAdV3u3FJUvbb9M-JMQrQXihmU">
-      <img id="img" src="img/kankou.gif" alt="島田歩き" title="島田歩き">
-    </a>
+    <div id="main">
+      <a href="https://www.google.com/maps/d/u/0/embed?mid=1SvXaaOEm7sRTuzI90XsrLS6ALVo">
+        <img id="img" src="img/toreka.gif" alt="半券サービス＆トレカ販売場所" title="半券サービス＆トレカ販売場所">
+      </a></br></br>
+      <a href="https://www.google.com/maps/d/embed?mid=1OEAdV3u3FJUvbb9M-JMQrQXihmU">
+        <img id="img" src="img/kankou.gif" alt="島田歩き" title="島田歩き">
+      </a></br>
+    </div>
+    <div id="credit">
+      created by
+      <a href="http://www.edu.pref.shizuoka.jp/shimada-ch/home.nsf/IndexFormView?OpenView">
+        静岡県立島田商業高等学校
+      </a>
+    </div>
     <!-- <iframe id="map" src="https://www.google.com/maps/d/embed?mid=1rkj1pYeUXbM7OGlN6ildPOcN0MQ"></iframe> -->
   </body>
 </HTML>
