--- a/index.html
+++ b/index.html
@@ -22,5 +22,15 @@
       </a>
     </div>
     <!-- <iframe id="map" src="https://www.google.com/maps/d/embed?mid=1rkj1pYeUXbM7OGlN6ildPOcN0MQ"></iframe> -->
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-93052544-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
   </body>
 </HTML>
